--- a/index.html
+++ b/index.html
@@ -16,26 +16,31 @@
         <img src="imgs/logo.webp" alt="logo" />
       </div>
       <nav>
-        <ul>
+        <ul class="nav_links"">
           <li><a href="#">Home</a></li>
           <li><a href="#">Categories</a></li>
           <li><a href="#">About</a></li>
         </ul>
       </nav>
+      <div class="menu_toggle" id="menu-toggle">
+        ☰
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1>Las mejores recetas</h1>
+        <h1>The Best Recipes</h1>
       </section>
       <section class="recetas boxed">
-        <h2>Últimas recetas</h2>
+        <h2>latest recipes</h2>
         <div class="recetas_grid">
         
         </div>
       </section>
     </main>
     <footer>
-      <div>Copyright 2023</div>
+      <div>© Copyright 2025</div>
+      <div>Recipes</div>
+      <div>Renata Mandelman</div>
     </footer>
     <script src="./js/main.js"></script>
   </body>
