--- a/recipe.html
+++ b/recipe.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="/imgs/logo.webp" href="/imgs/logo.webp">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Kanit:wght@200;400;700&display=swap" rel="stylesheet">
@@ -27,6 +29,9 @@
         <section class="hero">
 
         </section>
+        <section class="extraInfo">
+
+        </section>
           <section class="informationSection">
          <div class="information">
 
@@ -35,7 +40,9 @@
           </section>
     </main>
     <footer>
-        <div>Copyright 2023</div>
+        <div>© Copyright 2025</div>
+        <div>Recipes</div>
+        <div>Renata Mandelman</div>
       </footer>
     <script src="./js/recipe.js"></script>
 
